short link apis
